--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello!</h1>
 <p>Welcome to my Dialog Flow Project.</p>
+<P> Click the circle button at the bottom right to start the Chatbot</p>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
